corrected alignment issues with stage containers

--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,11 @@
     }
     .stage-description-image {
         margin: 20px auto 20px auto !important;
-        max-width: 60vw !important;
-        height: auto;
+        max-width: 350px !important;
+        min-width: 350px !important;
+        max-height: 350px !important;
+        min-height: 350px !important;
+        background-color: var(--tertiary-dark-color);
     }
     .bottom-stage-image {
         position: relative;
@@ -328,9 +331,10 @@
     margin-top: 20px;
 }
 .text-box {
-    display: block;
-    margin-top: auto;
-    margin-bottom: auto;
+    display: flex;
+    flex-direction: column;
+    margin-top: auto !important;
+    margin-bottom: auto !important;
 }
 .project-image {
     padding: 2px;
@@ -567,6 +571,8 @@ body {
 }
 .stage-description {
     background-color: var(--tertiary-dark-color) !important ;
+    min-height: 450px !important;
+    align-content: center;
 }
 .stage-image-container {
     display: flex;
@@ -574,24 +580,27 @@ body {
     margin: 10px auto;
     background-color: var(--tertiary-dark-color);
     border-radius: 25px;
-    max-height: 455px;
+    max-height: 430px;
+    padding: 20px !important;
 }
 .stage-description-image {
-    max-width: 375px;
-    min-width: 375px;
-    max-height: 375px;
-    min-height: 375px;
+    max-width: 375px !important;
+    min-width: 375px !important;
+    height: 375px !important;
+    width: 375px !important;
+    max-height: 375px !important;
+    min-height: 375px !important;
     margin: 20px 10px;
     border-radius: 25px;
     border: 4px solid white;
 }
 .img-scroll-container {
-    position: relative;
-    top: -430px;
     display: flex;
     flex-direction: row;
     margin: auto auto 20px auto;
     z-index: 100;
+    position: relative;
+    top: -432px;
 }
 .image-circle {
     min-width: 10px;
@@ -623,4 +632,16 @@ body {
 }
 .bottom-stage-image {
     z-index: 0;
+}
+.text-top {
+    margin-top: 20px;
+}
+.text {
+    text-align: left;
+    margin-left: 15px;
+    margin-right: 15px;
+    font-size: clamp(16px, 2vw, 19px);
+}
+.text-bottom {
+    margin-bottom: 20px;
 }
